4-service/ingress-resource/ingress-wear-watch.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingerss-wear-watch
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
          - backend:
              serviceName: wear-service
              servicePort: 80
    - host: watch.my-online-store.com
      http:
        paths:
          - backend:
              serviceName: watch-service
              servicePort: 80
