4-service/ingress-resource/ingress-wear.yml
apiVersion: extenstion/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
